Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,3 +5,4 @@
 [access "refs/*"]
 	owner = group plugins-checks-jenkins
 	create = group plugins-checks-jenkins
+	push = +force group plugins-checks-jenkins
