--- a/project.config
+++ b/project.config
@@ -6,3 +6,4 @@
 	owner = group plugins-checks-jenkins
 	create = group plugins-checks-jenkins
 	push = +force group plugins-checks-jenkins
+	read = group plugins-checks-jenkins
