Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,5 +5,5 @@
 [access "refs/*"]
 	owner = group plugins-checks-jenkins
 	create = group plugins-checks-jenkins
-	push = +force group plugins-checks-jenkins
+	push = group plugins-checks-jenkins
 	read = group plugins-checks-jenkins
