Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,7 +3,17 @@
 [submit]
 	action = inherit
 [access "refs/*"]
+	owner = group google/gerritcodereview-maintainers@googlegroups.com
 	owner = group plugins-checks-jenkins
-	create = group plugins-checks-jenkins
-	push = group plugins-checks-jenkins
-	read = group plugins-checks-jenkins
+[access "refs/for/refs/meta/config"]
+	push = group Registered Users
+	pushMerge = group Registered Users
+[access "refs/heads/*"]
+	create = group Project Owners
+	label-Code-Review = -2..+2 group Project Owners
+	label-Verified = -1..+1 group Change Owner
+	label-Verified = -1..+1 group Project Owners
+	label-Verified = -1..+1 group gerrit-verifiers
+	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
+	submit = group Change Owner
+	submit = group Project Owners
