Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,15 +5,25 @@
 [access "refs/*"]
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
 	owner = group plugins-checks-jenkins
+	read = group Anonymous Users
 [access "refs/for/refs/meta/config"]
 	push = group Registered Users
 	pushMerge = group Registered Users
 [access "refs/heads/*"]
 	create = group Project Owners
 	label-Code-Review = -2..+2 group Project Owners
+	label-Code-Review = -2..+2 group Registered Users
 	label-Verified = -1..+1 group Change Owner
 	label-Verified = -1..+1 group Project Owners
 	label-Verified = -1..+1 group gerrit-verifiers
 	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
 	submit = group Change Owner
 	submit = group Project Owners
+[access "refs/for/*"]
+	addPatchSet = group gerrit-verifiers
+	addPatchSet = group google/gerritcodereview-maintainers@googlegroups.com
+	addPatchSet = block group Anonymous Users
+[access "refs/for/refs/heads/*"]
+	push = group Registered Users
+	pushMerge = group Registered Users
+	viewPrivateChanges = group gerrit-ci
