--- a/project.config
+++ b/project.config
@@ -15,12 +15,12 @@
 	label-Code-Review = -2..+2 group Registered Users
 	label-Verified = -1..+1 group Change Owner
 	label-Verified = -1..+1 group Project Owners
-	label-Verified = -1..+1 group gerrit-verifiers
+	label-Verified = -1..+1 group gerrit-trusted-contributors
 	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
 	submit = group Change Owner
 	submit = group Project Owners
 [access "refs/for/*"]
-	addPatchSet = group gerrit-verifiers
+	addPatchSet = group gerrit-trusted-contributors
 	addPatchSet = group google/gerritcodereview-maintainers@googlegroups.com
 	addPatchSet = block group Anonymous Users
 [access "refs/for/refs/heads/*"]
