Modify access rules

--- a/project.config
+++ b/project.config
@@ -27,3 +27,6 @@
 	push = group Registered Users
 	pushMerge = group Registered Users
 	viewPrivateChanges = group gerrit-ci
+[access "refs/meta/config"]
+	label-Code-Review = -2..+2 group Project Owners
+	submit = group Project Owners
